@@ -1,6 +1,7 @@
 Revision history for Email-Sender
 
 {{$NEXT}}
+        - avoid uninitialized warning when delivering to Maildir
 
 1.300018  2015-05-27 15:28:44-04:00 America/New_York
         - stable release of changes from 1.300017
